@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 the original author or authors.
+ * Copyright 2020-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -43,6 +43,7 @@ import org.mockito.ArgumentCaptor;
 
 import org.springframework.kafka.core.KafkaOperations;
 import org.springframework.kafka.core.KafkaOperations.OperationsCallback;
+import org.springframework.kafka.support.KafkaHeaders;
 import org.springframework.kafka.support.serializer.DeserializationException;
 import org.springframework.kafka.support.serializer.ErrorHandlingDeserializer;
 import org.springframework.util.concurrent.SettableListenableFuture;
@@ -130,13 +131,18 @@ public class DeadLetterPublishingRecovererTests {
 		willReturn(new SettableListenableFuture<Object>()).given(template).send(any(ProducerRecord.class));
 		ConsumerRecord<String, String> record = new ConsumerRecord<>("foo", 0, 0L, 0L, TimestampType.CREATE_TIME,
 				0L, 0, 0, "bar", "baz", headers);
-		recoverer.accept(record, new RuntimeException());
+		recoverer.accept(record, new RuntimeException("testV"));
 		ArgumentCaptor<ProducerRecord> captor = ArgumentCaptor.forClass(ProducerRecord.class);
 		verify(template).send(captor.capture());
-		headers = captor.getValue().headers();
+		ProducerRecord recovered = captor.getValue();
+		assertThat(recovered.key()).isEqualTo("key".getBytes());
+		assertThat(recovered.value()).isEqualTo("value".getBytes());
+		headers = recovered.headers();
 		assertThat(headers.lastHeader(ErrorHandlingDeserializer.VALUE_DESERIALIZER_EXCEPTION_HEADER)).isNull();
-		assertThat(headers.lastHeader(ErrorHandlingDeserializer.KEY_DESERIALIZER_EXCEPTION_HEADER)).isNotNull();
+		assertThat(headers.lastHeader(ErrorHandlingDeserializer.KEY_DESERIALIZER_EXCEPTION_HEADER)).isNull();
 		assertThat(headers.lastHeader("foo")).isNotNull();
+		assertThat(headers.lastHeader(KafkaHeaders.DLT_KEY_EXCEPTION_MESSAGE).value()).isEqualTo("testK".getBytes());
+		assertThat(headers.lastHeader(KafkaHeaders.DLT_EXCEPTION_MESSAGE).value()).isEqualTo("testV".getBytes());
 	}
 
 	@SuppressWarnings({ "rawtypes", "unchecked" })
@@ -209,7 +215,9 @@ public class DeadLetterPublishingRecovererTests {
 	private byte[] header(boolean isKey) {
 		ByteArrayOutputStream baos = new ByteArrayOutputStream();
 		try {
-			new ObjectOutputStream(baos).writeObject(new DeserializationException("test", new byte[0], isKey, null));
+			new ObjectOutputStream(baos).writeObject(new DeserializationException(
+					isKey ? "testK" : "testV",
+					isKey ? "key".getBytes() : "value".getBytes(), isKey, null));
 		}
 		catch (IOException e) {
 			throw new UncheckedIOException(e);
